[package]
name = "hash-ids"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
description = "a fash hashids implementation"
repository = "https://github.com/kardeiz/hash-ids"
readme = "README.md"
keywords = ["hashids", "id", "generator"]
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
